Feat: cria as documentações da ReceitaController para o swagger
